--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,20 +15,40 @@
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintRight_toRightOf="parent"
 			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"/>
+			app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"
+			tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
+			tools:layout_constraintBottom_creator="1" tools:layout_constraintLeft_creator="1"/>
 
-	<TextView
-			android:id="@+id/framesCount"
+	<LinearLayout
+			android:orientation="horizontal"
 			android:background="#96000000"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:textAlignment="center" android:paddingTop="@dimen/cfc_padding"
-			android:paddingBottom="@dimen/cfc_padding" android:textColor="@android:color/white"
-			tools:layout_constraintRight_creator="1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-			app:layout_constraintRight_toRightOf="parent" app:layout_constraintBaseline_toBaselineOf="parent"
-			tools:layout_constraintBaseline_creator="1" tools:layout_constraintLeft_creator="1"
-			app:layout_constraintLeft_toLeftOf="parent" android:layout_marginLeft="8dp"
-			android:textSize="18sp"/>
+			android:layout_width="match_parent"
+			android:paddingTop="@dimen/cfc_padding"
+			android:paddingBottom="@dimen/cfc_padding"
+			android:layout_height="@dimen/frame_info_height"
+			android:layout_marginRight="0dp"
+			app:layout_constraintRight_toRightOf="parent"
+			android:layout_marginLeft="0dp"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="0dp">
+		<TextView
+				android:id="@+id/framesCount"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:textColor="@android:color/white"
+				tools:layout_constraintRight_creator="1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+				app:layout_constraintRight_toRightOf="parent" app:layout_constraintBaseline_toBaselineOf="parent"
+				tools:layout_constraintBaseline_creator="1" tools:layout_constraintLeft_creator="1"
+				app:layout_constraintLeft_toLeftOf="parent"
+				android:textSize="18sp" android:layout_weight="1" />
+		<TextView
+				android:id="@+id/framesPrefs"
+				android:textSize="18sp"
+				android:layout_marginEnd="8dp"
+				android:layout_width="0dp" android:textColor="@android:color/white"
+				android:layout_height="wrap_content" android:layout_weight="1" android:textAlignment="viewEnd"/>
+	</LinearLayout>
 	<!--Button
 			android:id="@+id/startButton"
 			android:layout_width="0dp"
@@ -38,26 +58,6 @@
 			android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginEnd="8dp" app:layout_constraintRight_toRightOf="parent"
 			tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent"/-->
-
-	<Button
-			android:text="@string/mainButtonImage"
-			android:layout_width="88dp"
-			android:layout_height="48dp"
-			android:id="@+id/openImageSettings"
-			tools:layout_constraintRight_creator="1"
-			android:layout_marginEnd="8dp"
-			android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
-			android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/framesCount"/>
-	<Button
-			android:text="@string/mainButtonVideo"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:id="@+id/openVideoSettings" tools:layout_conversion_absoluteX="88dp"
-			tools:layout_conversion_absoluteY="32dp" tools:layout_conversion_absoluteWidth="88dp"
-			tools:layout_conversion_absoluteHeight="48dp"
-			android:layout_marginLeft="8dp"
-			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintBaseline_toBaselineOf="@+id/openImageSettings" android:layout_marginStart="8dp"/>
 
 	<android.support.design.widget.FloatingActionButton
 			android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginBottom="24dp"
 			app:backgroundTint="@color/colorAccent"
-			app:layout_constraintRight_toLeftOf="@+id/startButton" android:layout_marginRight="16dp"
+			app:layout_constraintRight_toLeftOf="@+id/startButton" android:layout_marginRight="8dp"
 			android:layout_marginEnd="8dp"/>
 
 
