Add flash setting

--- a/app/src/main/res/layout/activity_settings_image.xml
+++ b/app/src/main/res/layout/activity_settings_image.xml
@@ -62,5 +62,18 @@
 					android:layout_gravity="fill_vertical"
 					android:layout_weight="2.0"/>
 		</TableRow>
+		<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="@dimen/settings_field_height"
+					android:text="@string/settingImageFlash"
+					android:layout_weight="1.0"
+					android:gravity="fill_vertical"/>
+			<Spinner
+					android:id="@+id/spinnerFlash"
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/settings_field_height"
+					android:layout_weight="2.0" android:spinnerMode="dialog"/>
+		</TableRow>
 	</TableLayout>
 </ScrollView>
