--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,14 @@
 	<LinearLayout
 			android:orientation="horizontal"
 			android:background="#96000000"
-			android:layout_width="match_parent"
+			android:layout_width="0dp"
 			android:paddingTop="@dimen/cfc_padding"
 			android:paddingBottom="@dimen/cfc_padding"
 			android:layout_height="@dimen/frame_info_height"
-			android:layout_marginRight="0dp"
 			app:layout_constraintRight_toRightOf="parent"
-			android:layout_marginLeft="0dp"
 			app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
-			android:layout_marginTop="0dp">
+	>
 		<TextView
 				android:id="@+id/framesCount"
 				android:layout_width="0dp"
@@ -65,7 +63,7 @@
 			android:clickable="true"
 			app:fabSize="normal"
 			app:srcCompat="@drawable/ic_videocam"
-			android:id="@+id/startButton" android:layout_marginRight="24dp"
+			android:id="@+id/startButton"
 			app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginBottom="24dp" android:layout_marginEnd="24dp"
 			app:backgroundTint="@color/colorPrimaryDark"/>
@@ -79,8 +77,14 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginBottom="24dp"
 			app:backgroundTint="@color/colorAccent"
-			app:layout_constraintRight_toLeftOf="@+id/startButton" android:layout_marginRight="8dp"
+			app:layout_constraintRight_toLeftOf="@+id/startButton"
 			android:layout_marginEnd="8dp"/>
+	<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="18sp"
+			android:id="@+id/mainBatteryLevel" android:layout_marginStart="8dp" app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
