--- a/app/src/main/res/layout/activity_settings_video.xml
+++ b/app/src/main/res/layout/activity_settings_video.xml
@@ -2,86 +2,95 @@
 <ScrollView
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
-	<LinearLayout
-			android:orientation="vertical"
+		android:layout_height="wrap_content">
+	<TableLayout
 			android:padding="@dimen/settings_padding"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
-		<TableLayout
+		<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/settingVideoDelay"
+					android:layout_weight="2.0" />
+			<EditText
+					android:id="@+id/editTextDelay"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="@string/settingVideoDelayDefaultValue"
+					android:layout_weight="1.0"
+					android:inputType="number|numberDecimal" />
+		</TableRow>
+		<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/settingVideoCaptureInterval"
+					android:layout_weight="2.0" />
+			<EditText
+					android:id="@+id/editTextInterval"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="@string/settingVideoCaptureIntervalDefaultValue"
+					android:layout_weight="1.0"
+					android:inputType="number|numberDecimal" />
+		</TableRow>
+		<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="@dimen/settings_field_height"
+					android:text="@string/settingVideoFps"
+					android:gravity="fill_vertical"
+					android:layout_weight="2.0" />
+			<LinearLayout
+					android:orientation="horizontal"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1.0">
+				<EditText
+						android:id="@+id/editTextFPS"
+						android:layout_width="40dp"
+						android:layout_height="wrap_content"
+						android:hint="@string/settingVideoFpsDefaultValue"
+						android:inputType="number|numberDecimal" android:textAlignment="center"/>
+				<SeekBar
+						android:id="@+id/editSeekFPS"
+						android:max="45"
+						android:layout_gravity="center_vertical"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content" />
+			</LinearLayout>
+		</TableRow>
+		<TableRow
 				android:layout_width="match_parent"
 				android:layout_height="match_parent">
-
-			<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
-				<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/settingVideoDelay"
-						android:layout_weight="2.0" />
-				<EditText
-						android:id="@+id/editTextDelay"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:hint="@string/settingVideoDelayDefaultValue"
-						android:layout_weight="1.0"
-						android:inputType="number|numberDecimal" />
-			</TableRow>
-			<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
-				<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/settingVideoCaptureInterval"
-						android:layout_weight="2.0" />
-				<EditText
-						android:id="@+id/editTextInterval"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:hint="@string/settingVideoCaptureIntervalDefaultValue"
-						android:layout_weight="1.0"
-						android:inputType="number|numberDecimal" />
-			</TableRow>
-			<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
-				<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="@dimen/settings_field_height"
-						android:text="@string/settingVideoFps"
-						android:gravity="fill_vertical"
-						android:layout_weight="2.0" />
-				<LinearLayout
-						android:orientation="horizontal"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.0">
-					<EditText
-							android:id="@+id/editTextFPS"
-							android:layout_width="40dp"
-							android:layout_height="wrap_content"
-							android:hint="@string/settingVideoFpsDefaultValue"
-							android:inputType="number|numberDecimal" android:textAlignment="center"/>
-					<SeekBar
-							android:id="@+id/editSeekFPS"
-							android:max="45"
-							android:layout_gravity="center_vertical"
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content" />
-				</LinearLayout>
-			</TableRow>
-			<TableRow
+			<TextView
+					android:labelFor="@+id/editTextPath"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/settingVideoPath"
+					android:layout_weight="2.0"/>
+			<EditText
+					android:id="@+id/editTextPath"
+					android:inputType="textUri"
+					android:maxLines="1"
 					android:layout_width="match_parent"
-					android:layout_height="match_parent">
-				<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/settingVideoPath"
-						android:layout_weight="2.0"/>
-				<EditText
-						android:id="@+id/editTextPath"
-						android:inputType="textUri"
-						android:maxLines="1"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.0" />
-			</TableRow>
-		</TableLayout>
-	</LinearLayout>
+					android:layout_height="wrap_content"
+					android:layout_weight="1.0" />
+		</TableRow>
+		<TableRow
+				android:layout_width="match_parent"
+				android:layout_height="match_parent">
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/settingVideoMode"
+					android:layout_weight="2.0"/>
+			<Spinner
+					android:id="@+id/spinnerMode"
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/settings_field_height"
+					android:layout_weight="2.0" android:spinnerMode="dialog"/>
+		</TableRow>
+	</TableLayout>
 </ScrollView>
