--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
 		android:id="@+id/linearLayoutPreview"
 		xmlns:android="http://schemas.android.com/apk/res/android">
 
-
 	<SurfaceView
 			android:id="@+id/mainSurface"
 			android:focusable="false"
@@ -28,8 +27,8 @@
 			android:layout_height="@dimen/frame_info_height"
 			app:layout_constraintRight_toRightOf="parent"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-	>
+			app:layout_constraintTop_toTopOf="parent">
+
 		<TextView
 				android:id="@+id/framesCount"
 				android:layout_width="0dp"
@@ -40,22 +39,15 @@
 				tools:layout_constraintBaseline_creator="1" tools:layout_constraintLeft_creator="1"
 				app:layout_constraintLeft_toLeftOf="parent"
 				android:textSize="18sp" android:layout_weight="1" />
+
 		<TextView
 				android:id="@+id/framesPrefs"
 				android:textSize="18sp"
 				android:layout_marginEnd="8dp"
 				android:layout_width="0dp" android:textColor="@android:color/white"
 				android:layout_height="wrap_content" android:layout_weight="1" android:textAlignment="viewEnd"/>
+
 	</LinearLayout>
-	<!--Button
-			android:id="@+id/startButton"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:text="@string/mainCaptureButton"
-			tools:layout_constraintRight_creator="1" tools:layout_constraintBottom_creator="1"
-			android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
-			android:layout_marginEnd="8dp" app:layout_constraintRight_toRightOf="parent"
-			tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent"/-->
 
 	<android.support.design.widget.FloatingActionButton
 			android:layout_width="wrap_content"
@@ -67,6 +59,7 @@
 			app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginBottom="24dp" android:layout_marginEnd="24dp"
 			app:backgroundTint="@color/colorPrimaryDark"/>
+
 	<android.support.design.widget.FloatingActionButton
 			android:layout_width="40dp"
 			android:layout_height="wrap_content"
@@ -79,12 +72,12 @@
 			app:backgroundTint="@color/colorAccent"
 			app:layout_constraintRight_toLeftOf="@+id/startButton"
 			android:layout_marginEnd="8dp"/>
+
 	<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="18sp"
 			android:id="@+id/mainBatteryLevel" android:layout_marginStart="8dp" app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
-
 
 </android.support.constraint.ConstraintLayout>
