--- a/app/src/main/res/layout/activity_holder.xml
+++ b/app/src/main/res/layout/activity_holder.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:context="ru.vlad805.timelapse.activity.MainActivity">
-
-</android.support.constraint.ConstraintLayout>
+	<LinearLayout
+			android:id="@+id/camera_options_root"
+			android:orientation="vertical"
+			android:focusable="true" android:focusableInTouchMode="true"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
+	</LinearLayout>
+</ScrollView>
