--- a/app/src/main/res/layout/view_camera_option.xml
+++ b/app/src/main/res/layout/view_camera_option.xml
@@ -2,20 +2,22 @@
 <LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="horizontal"
+		android:layout_marginStart="@dimen/margin_8dp"
+		android:layout_marginEnd="@dimen/margin_8dp"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="40dp">
 	<TextView
 			android:id="@+id/view_camera_option_title"
-			android:paddingStart="@dimen/view_camera_option_label_padding_horizontal"
-			android:paddingEnd="@dimen/view_camera_option_label_padding_horizontal"
-			android:paddingTop="@dimen/view_camera_option_label_padding_vertical"
-			android:paddingBottom="@dimen/view_camera_option_label_padding_vertical"
+			android:gravity="center_vertical|end"
+			android:textSize="@dimen/text_size_14sp"
+			android:layout_marginEnd="@dimen/margin_4dp"
 			android:layout_weight="1"
 			android:layout_width="0dp"
 			android:layout_height="match_parent" />
 	<FrameLayout
 			android:id="@+id/view_camera_option_wrap"
-			android:layout_weight="1"
+			android:layout_gravity="center_vertical"
+			android:layout_weight="2"
 			android:layout_width="0dp"
-			android:layout_height="match_parent" />
+			android:layout_height="wrap_content" />
 </LinearLayout>
