--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,5 +6,41 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:context=".activity.TestActivity">
+	<com.google.android.cameraview.CameraView
+			android:id="@+id/camera_surface"
+			android:focusable="false"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:keepScreenOn="true"
+			android:adjustViewBounds="true"
+			app:autoFocus="true"
+			app:useHighResPicture="true"
+			app:cameraAspectRatio="16:9"
+			app:maximumWidth="5000"
+			app:maximumPreviewWidth="1920"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintVertical_bias="0.0"
+			app:layout_constraintHorizontal_bias="0.0"
+			tools:layout_constraintTop_creator="1"
+			tools:layout_constraintRight_creator="1"
+			tools:layout_constraintBottom_creator="1"
+			tools:layout_constraintLeft_creator="1" />
+
+	<android.support.design.widget.FloatingActionButton
+			android:id="@+id/camera_toggle"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:clickable="true"
+			android:focusable="true"
+			app:fabSize="normal"
+			app:srcCompat="@drawable/ic_stop"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			android:layout_marginBottom="24dp"
+			android:layout_marginEnd="24dp"
+			app:backgroundTint="@color/colorPrimaryDark" />
 
 </android.support.constraint.ConstraintLayout>
